Update: Replaced CSS sun with custom logo images

--- a/index.html
+++ b/index.html
@@ -22,37 +22,7 @@
         <!-- Left Side - Logo Section -->
         <section class="logo-section">
             <div class="logo-wrapper">
-                <div class="sun-logo">
-                    <div class="sun-core">
-                        <span class="sun-face">☺</span>
-                    </div>
-                    <div class="sun-rays-container">
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                        <div class="ray"></div>
-                    </div>
-                    <div class="sun-circles">
-                        <div class="circle circle-1"></div>
-                        <div class="circle circle-2"></div>
-                        <div class="circle circle-3"></div>
-                        <div class="circle circle-4"></div>
-                        <div class="circle circle-5"></div>
-                        <div class="circle circle-6"></div>
-                        <div class="circle circle-7"></div>
-                        <div class="circle circle-8"></div>
-                    </div>
-                </div>
-                <h1 class="brand-name">KidSpark</h1>
-                <p class="brand-tagline">LEARNING IS FUN</p>
+                <img src="logo-full.png" alt="KidSpark - Learning is Fun" class="logo-image">
             </div>
         </section>
 
