Update: Implemented layered logo animation with spinning rays/circles and floating face

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         <!-- Left Side - Logo Section -->
         <section class="logo-section">
             <div class="logo-wrapper">
-                <img src="logo-full.png" alt="KidSpark - Learning is Fun" class="logo-image">
+                <div class="animated-logo-container">
+                    <img src="logo-rays.png" class="logo-layer layer-rays" alt="Sun Rays">
+                    <img src="logo-circles.png" class="logo-layer layer-circles" alt="Decorative Circles">
+                    <img src="logo-face.png" class="logo-layer layer-face" alt="KidSpark Face">
+                </div>
+                <h1 class="brand-name">KidSpark</h1>
+                <p class="brand-tagline">LEARNING IS FUN</p>
             </div>
         </section>
 
